--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 authors = ["Dargar <dargar@example.com>"]
 
 [dependencies]
+cgmath = "0.5.0"
 gl = "0.3.0"
 libc = "0.2.2"
 sdl2 = "0.11.0"
